<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/iv_signUpLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/img_01" />

    <TextView
        android:id="@+id/tv_signupText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/tv_signup_text"
        app:layout_constraintTop_toBottomOf="@+id/iv_signUpLogo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_join"
        app:layout_constraintTop_toBottomOf="@+id/tv_signupText"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="225dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollConst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:hint="@string/et_nameHint"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="@+id/scrollConst" />

            <EditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="120dp"
                android:gravity="center"
                android:hint="@string/et_idHint"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/et_name" />

            <Button
                android:id="@+id/btn_checkId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/btn_checkID"
                app:layout_constraintBottom_toBottomOf="@+id/et_id"
                app:layout_constraintStart_toEndOf="@+id/et_id"
                app:layout_constraintTop_toTopOf="@+id/et_id" />

            <EditText
                android:id="@+id/et_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:hint="@string/et_pwHint"
                android:inputType="textPassword"

                app:layout_constraintTop_toBottomOf="@+id/et_id" />

            <EditText
                android:id="@+id/et_pwCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:hint="@string/et_pwcheckHint"
                android:inputType="textPassword"

                app:layout_constraintTop_toBottomOf="@+id/et_pw" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:hint="@string/et_emailHint"
                android:inputType="textEmailAddress"

                app:layout_constraintTop_toBottomOf="@+id/et_pwCheck" />

            <TextView
                android:id="@+id/tv_authent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="200dp"
                android:gravity="center"
                android:textSize="45sp"

                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <EditText
                android:id="@+id/et_authent"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:hint="@string/et_authent"

                app:layout_constraintBottom_toBottomOf="@+id/tv_authent"
                app:layout_constraintStart_toEndOf="@+id/tv_authent"
                app:layout_constraintTop_toTopOf="@+id/tv_authent" />


            <Button
                android:id="@+id/btn_newAuthent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_newAuthent"
                app:layout_constraintEnd_toEndOf="@+id/tv_authent"

                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintStart_toStartOf="@+id/tv_authent"
                app:layout_constraintTop_toBottomOf="@+id/tv_authent" />

            <Button
                android:id="@+id/btn_tts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tts"

                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@+id/btn_newAuthent"
                app:layout_constraintTop_toTopOf="@+id/btn_newAuthent"
                app:layout_constraintBottom_toBottomOf="@+id/btn_newAuthent"/>


            <Button
                android:id="@+id/btn_checkAuthent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/btn_checkAuthent"

                app:layout_constraintBottom_toBottomOf="@+id/btn_newAuthent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_newAuthent"
                app:layout_constraintTop_toTopOf="@+id/btn_newAuthent" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_join"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_signupText"
        app:layout_constraintStart_toEndOf="@+id/iv_signUpLogo"
        >

        <LinearLayout
            android:id="@+id/cl_iconScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rg_selectIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num1"/>

                <RadioButton
                    android:id="@+id/rb_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num2"/>

                <RadioButton
                    android:id="@+id/rb_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num3"/>

                <RadioButton
                    android:id="@+id/rb_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num4"/>

                <RadioButton
                    android:id="@+id/rb_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num5"/>



            </RadioGroup>




        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>